fix: DBML text is too small

--- a/src/assets/stylesheets/redmine-kroki.css
+++ b/src/assets/stylesheets/redmine-kroki.css
@@ -15,6 +15,10 @@
   font-size: 15px;
 }
 
+.kroki svg text {
+  font-size: revert-layer;
+}
+
 .kroki.dark svg {
   filter: invert(1) hue-rotate(180deg);
 }
